# allure-pytest-template

./: .gitignore  README.md  pyproject.toml  pytest.ini
.github/workflows/: pytest.yml
src/pytest_demo/: my_object.py
tests/: conftest.py  test_my_object.py
